add communities routes
