# routes/index.js
@@ -4,6 +4,7 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 router.use('/recipeinfo', require('./recipeinfo'))
 router.use('/comment', require('./comment'))
+router.use('/communities', require('./communities'))
 
 
 module.exports = router;
